--- a/index.html
+++ b/index.html
@@ -153,7 +153,9 @@
           <div class="submit">
             <button type="submit" class="btn primary" style="width:100%;">Оставить заявку</button>
           </div>
-          <div style="margin-top:10px; font-size:13px; color:var(--muted)">Или напиши в Telegram: <strong>@your_telegram</strong></div>
+<p class="small">Telegram: 
+            <strong><a href="https://t.me/+U8vNFCYe9SA2NmRi" target="_blank">Наш Telegram</a></strong>
+          </p>
         </form>
 
         <div id="thanks" style="display:none; margin-top:12px; color:#aee7c0">Спасибо! Мы свяжемся в ближайшее время.</div>
@@ -206,11 +208,11 @@
       <h2>Отзывы</h2>
       <div class="testimonials">
         <div class="testi">
-          <strong>Азамат, 19</strong>
+          <strong>Азамат,</strong>
           <p>Быстро понял Premiere, теперь сам монтирую клипы для тиктока — первые заказы через 2 недели.</p>
         </div>
         <div class="testi">
-          <strong>Лёля</strong>
+          <strong>Алина</strong>
           <p>Класс! Много практики и разбор работ — это реально работает.</p>
         </div>
         <div class="testi">
@@ -243,10 +245,11 @@
         </div>
         <div class="card">
           <h3>Контакты</h3>
-          <p class="small">Telegram: <strong>https://@menzive</strong></p>
-          <p class="small">WhatsApp: <strong>+7 (778)701-57-20</strong></p>
-          <p class="small">Email: <strong> editski11@gmail.com</strong></p>
-          <div style="margin-top:12px"><a class="btn ghost" href="mailto:you@example.com">Написать на Email</a></div>
+        <p class="small">Telegram: 
+            <strong><a href="https://t.me/+U8vNFCYe9SA2NmRi" target="_blank">Наш Telegram</a></strong>
+          </p>
+          <p class="small">Email: <strong> biznesd30@gmail.com</strong></p>
+          <div style="margin-top:12px"><a class="btn ghost" href="mailto:biznesd30@gmail.com">Написать на Email</a></div>
         </div>
       </div>
     </section>
@@ -295,5 +298,4 @@
 
   </script>
 </body>
-
 </html>
